[package]
name = "blue-pill-quickstart-rtfm"
version = "0.1.0"
authors = ["Zach Lewko <zlewko@gmail.com>","Guillaume Pinot <texitoi@texitoi.eu>"]
edition = "2018"

[dependencies]
stm32f1xx-hal = { version = "0.2", features = ["rt", "stm32f103" ] }
cortex-m = "0.5"
cortex-m-rt = { version = "0.6.6", features = ["device"] }
cortex-m-rtfm = "0.4.2"
cortex-m-rtfm-macros  = "0.4.2"
panic-semihosting = "0.5"

[dependencies.stm32f1]
version = "0.6.0"
features = ["stm32f103", "rt"]